// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer component renders correctly with custom props 1`] = `
<View
  style={
    {
      "marginBottom": 15,
      "marginHorizontal": undefined,
      "marginLeft": 10,
      "marginRight": 5,
      "marginTop": 20,
      "marginVertical": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    style={
      [
        [
          {
            "color": "#020202",
            "fontFamily": "Avenir",
            "fontSize": 12,
          },
          {
            "fontSize": 16,
          },
          {
            "color": "red",
          },
          {
            "fontFamily": "Avenir-Black",
          },
        ],
        {
          "letterSpacing": undefined,
          "lineHeight": undefined,
          "textAlign": "center",
          "textDecorationLine": "none",
          "textTransform": undefined,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`TextContainer component renders correctly with default props 1`] = `
<View
  style={
    {
      "marginBottom": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    style={
      [
        [
          {
            "color": "#020202",
            "fontFamily": "Avenir",
            "fontSize": 12,
          },
        ],
        {
          "letterSpacing": undefined,
          "lineHeight": undefined,
          "textAlign": undefined,
          "textDecorationLine": "none",
          "textTransform": undefined,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;
